[package]
name = "auraectl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "auraectl"
path = "src/main.rs"


[dependencies]
clap = { version = "3.1.20", features = ["derive"] }
log = "0.4.17"
multi_log = "0.1.2"
simplelog = "0.12.0"
syslog = "6.0.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.23"
tokio-stream = "0.1.9"
h2 = "0.3.13"

